--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="meuNome">Reynan Paiva</h1>
+    <h1 class="meuNome">Reynan Paiva &#x1F913 </h1>
     <div class="Timer">
         <h1 id="watch">00:00:00</h1>
         <button class="Start-btn" onclick="start()">Iniciar</button>
